# Libusb-UVC

./: .gitignore  LICENCE  README.md  pyproject.toml  pytest.ini  pyusb_capture_display.py  pyusb_capture_frame.py  pyusb_capture_video.py  pyusb_uvc_info.py  requirements.txt  uvc_async.py  uvc_usb.py
docs/: api.rst  conf.py  controls_and_streaming.rst  examples.rst  getting_started.rst  index.rst  release_notes.rst  stereo_sync.md  stereo_sync.rst  troubleshooting.rst
docs/howto/: gadget_testing.rst  index.rst
examples/: README.md  exposure_sweep.py  uvc_capture_frame.py  uvc_capture_stereo.py  uvc_capture_still.py  uvc_capture_still_live.py  uvc_capture_video.py  uvc_cli.py  uvc_display_frame.py  uvc_generate_quirk.py  uvc_inspect.py  uvc_ir_inspect.py  uvc_ir_torch_demo.py  uvc_led_preview.py
src/libusb_uvc/: ARCHITECTURE.md  __init__.py  core.py  decoders.py  stereo.py  uvc_async.py
src/libusb_uvc/quirks/: README.md  __init__.py  guid_0f3f95dc-2632-4c4e-92c9-a04782f43bc8.json  guid_63610682-5070-49ab-b8cc-b3855e8d221d.json
tests/: README.md  __init__.py  gadget_daemon.py  mocks.py  test_controls.py  test_decoder_preference.py  test_h264_utils.py  test_integration.py  test_stream_selection.py  test_streaming.py  uvc_emulator.py
tests/data/: sample_camera_profile.json  test_video.mjpeg
udev/: 99-hp-5mp-camera.rules
